--- a/inflearn/webpack-v4/src/index.css
+++ b/inflearn/webpack-v4/src/index.css
@@ -1,3 +1,9 @@
 body {
     background-image: url(./bg.jpg);
 }
+
+#fileTest {
+    width: 50px;
+    height: 50px;
+    background-image: url(./hamburger_btn.png);
+}
